2003-12-18  Calvin Liu <calvin.liu@sun.com>

	* evolution-mail-message.xml: On [Action] menu, change [Forward]
	to [Forward As...], [Forward Message] to [Forward].

2003-12-17  Rodney Dawes  <dobey@ximian.com>

	* evolution-mail-message.xml:
	* evolution-mail-messagedisplay.xml: Fix bug #49949

2003-12-17  Chris Toshok  <toshok@ximian.com>

	* evolution-addressbook.xml: add ContactsViewPreview command, a
	"Preview Pane" menu item, and a keybinding for it - same placement
	as the mailer's item.

2003-12-17  Rodrigo Moya <rodrigo@ximian.com>

	* evolution-calendar.xml: removed the 'NewCalendar' verb.

2003-12-09  Not Zed  <NotZed@Ximian.com>

	* evolution-mail-global.xml: add a _label to View option.  Bug
	#51242.

2003-12-04  Radek Doulik  <rodo@ximian.com>

	* evolution-mail-message.xml: added junk toolbar buttons

2003-12-03  JP Rosevear <jpr@ximian.com>

	* evolution-mail-global.xml: we want to insert at the place holder
	spot

2003-11-30  Yuedong Du  <yuedong.du@sun.com>

	* evolution-mail-list.xml: change shortcut of 'invert selection' from
	ctrl+I to shift+ctrl+I.

2003-11-18  Rodrigo Moya <rodrigo@ximian.com>

	* evolution-calendar.xml: removed the 'New...' items, since they are
	implemented in the shell as before.

2003-11-17  Ettore Perazzoli  <ettore@ximian.com>

	* evolution.xml: Rename verb "OpenFolderInNewWindow" to
	"OpenNewWindow".  Add a separator before it in the File -> New
	submenu.

2003-11-13  Ettore Perazzoli  <ettore@ximian.com>

	* evolution.xml: Remove type="toggle" from the "ToggleOffline"
	verb; I'm not sure why it was there in the first place and it was
	causing BonoboUI to spew warnings.

2003-11-13  Ettore Perazzoli  <ettore@ximian.com>

	* evolution.xml: Ooops, add missing closing </popups> tag.

2003-11-13  Ettore Perazzoli  <ettore@ximian.com>

	* evolution.xml: Add back send/receive command and toolbar button.

2003-11-13  Ettore Perazzoli  <ettore@ximian.com>

	* evolution.xml: Add "NewPopup" popup back.
