@@ -43,4 +43,14 @@
 
   </menu>
 
+  <dockitem name="Toolbar" 
+            relief="none" 
+            behavior="exclusive"
+	    _tip="Main toolbar" 
+            hlook="both_horiz" 
+            vlook="icon">
+    <placeholder name="MailMessageToolbar"/>
+    <separator f="" name="emailmessage"/>
+    <placeholder name="MailNextButtons"/>
+  </dockitem>
 </Root>
